# Payment-Application-FWD_Master

./: CMakeLists.txt  README.md  main.c
Application/: app.c  app.h
Card/: card.c  card.h
Data Types/: dataTypes.h
Server/: server.c  server.h
Terminal/: terminal.c  terminal.h
